--- a/src/styles.scss
+++ b/src/styles.scss
@@ -30,7 +30,3 @@ hr {
 a {
   cursor: pointer;
 }
-
-.image {
-  width: 60%;
-}
